finish client comments
