# app/Http/Controllers/API/UserAPIController.php
@@ -2,15 +2,19 @@
 
 namespace App\Http\Controllers\API;
 
-use App\Http\Requests\API\CreateUserAPIRequest;
 use App\Http\Requests\API\UpdateUserAPIRequest;
-use App\Models\User;
-use App\Repositories\UserRepository;
+use App\Models\{
+    User
+};
+use App\Repositories\{
+    UserRepository,
+    UserDevicesRepository,
+    DeviceRepository
+};
 use Illuminate\Http\Request;
 use App\Http\Controllers\AppBaseController;
-use InfyOm\Generator\Criteria\LimitOffsetCriteria;
-use Prettus\Repository\Criteria\RequestCriteria;
 use Illuminate\Http\Response as ResponseClass;
+use App\Criteria\UserDevicesNotificationsCriteria;
 
 /**
  * Class UserController
@@ -18,20 +22,20 @@ use Illuminate\Http\Response as ResponseClass;
  * @Controller(prefix="/api/users")
  * @Middleware({"cros", "api", "bindings"})
  */
+class UserAPIController extends AppBaseController {
 
-class UserAPIController extends AppBaseController
-{
     /** @var  UserRepository */
     private $userRepository;
-    
-    public function __construct(UserRepository $userRepo)
+
+    /** @var  UserDevicesRepository */
+    private $deviceRepository;
+
+    public function __construct(UserRepository $userRepo, DeviceRepository $deviceRepo)
     {
-        $this->middleware('cros');
-        $this->middleware('auth:api');
-        $this->middleware('bindings');
-        $this->userRepository = $userRepo;
+        $this->userRepository   = $userRepo;
+        $this->deviceRepository = $deviceRepo;
     }
-    
+
     /**
      * Store a newly created resource in storage.
      *
@@ -65,20 +69,41 @@ class UserAPIController extends AppBaseController
      *   @SWG\Response(response="default", ref="#/responses/SuccessResponse")
      * )
      */
-    public function saveDeviceToken(UpdateUserAPIRequest $request, User $user) {
-        $all = $request->all();
-        /*switch ($all['deviceType']) {
-            case 'android':
-                $all['device_type'] = 1;
-                break;
-            case 'ios':
-                $all['device_type'] = 2;
-                break;
-        }*/
+    public function saveDeviceToken(UpdateUserAPIRequest $request, User $user)
+    {
+        $all                 = $request->all();
+        /* switch ($all['deviceType']) {
+          case 'android':
+          $all['device_type'] = 1;
+          break;
+          case 'ios':
+          $all['device_type'] = 2;
+          break;
+          } */
         $all['device_token'] = $all['deviceToken'];
         $user->update($all);
         //return $this->sendResponse($user->toArray(), 'User updated successfully');
         return response()->jsonSuccess(ResponseClass::HTTP_ACCEPTED);
+    }
+
+    /**
+     * @SWG\Get(
+     *   tags={"User"},
+     *   path="/users/getUserNotifications/{userId}",
+     *   operationId="getUserNotifications",
+     *   @SWG\Parameter(ref="#/parameters/userId"),
+     *   @SWG\Response(response="default", ref="#/responses/device")
+     * )
+     * @Get("/getUserNotifications/{user}", as="userDevices.getUserNotifications")
+     */
+    public function getUserNotifications(Request $request, User $user)
+    {
+        $this->deviceRepository->pushCriteria(new UserDevicesNotificationsCriteria($user));
+        $userDevices     = $this->deviceRepository->all();
+        $data['account'] = $user->account;
+        $data['notifications'] = $this->deviceRepository->all()->toArray();
+
+        return $this->sendResponse($data, 'User Devices retrieved successfully');
     }
 
 }
